style.css
body {
    font-family: 'Ubuntu', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    align-items: center;
    background-color: #000408;
    color: #def;
}

.invertColor {
    background-color: #def;
    color: #000408;   
}

.regularColor {
    background-color: #000408;
}

.clickable {
    cursor: pointer;
}

#title {
    margin: 0;
}

#notificationText {
    visibility: hidden;
}

h1 {
    margin-top: 0;
    margin-bottom: 2rem;
    text-align: center;
}

.flex {
    display: flex;
}

.column {
    flex-direction: column;
}

#middleSection {
    gap: 2rem;
    justify-content: center;
}

.playerCard {
    justify-content: space-around;
    align-items: center;
    width: 20rem;
}

/* #player1Card {
    align-items: flex-end;
}

#player2Card {
    align-items: flex-start;
} */

.button {
    width: 8.5rem;
    height: 1.8rem;
    justify-content: center;
    border-style: solid;
    border-radius: 0.7rem;
    align-items: center;
    display: flex;
    font-size: 1.2rem;
    font-weight: 700;
}

.playerButtons {
    gap: 1rem;
    margin-bottom: 3rem;
}

.gameSquare {
    width: 7rem;
    aspect-ratio: 1;
    border-style: solid;
    border-radius: 10%;
    font-size: 6rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

#notificationText {
    height: 1.75rem;
    margin-bottom: 1.75rem;
}

#gameControlButtonContainer * {
    width: 10rem;
    height: 2rem;
    font-size: 1.6rem;
    margin: 1rem;
}

